<resources>
    <string name="app_name">Prayer Times</string>
    <string name="Fajr">Fajr</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Dhuhr">Dhuhr</string>
    <string name="Asr">Asr</string>
    <string name="Maghrib">Maghrib</string>
    <string name="Isha">Isha</string>
    <string name="qibla_note_text">Important Note: to get the right direction , keep mobile in Portrait mode and put it on stable surface</string>
    <string name="sensor_not_supported">Not Supported</string>
    <string name="compass_image">compass Image</string>
    <string name="qibla_direction">qibla direction</string>
    <string name="snackbartext">No Internet Connection</string>
    <string name="retry_snackbar">Retry</string>
    <string name="database_success">database success</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="qibla_activty_title">Qibla Direction</string>
    <string name="find_qibla">Find Qibla</string>
</resources>
