<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fajr"
            android:textColor="@color/white_color"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dhuhr"
            android:textColor="@color/white_color"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Asr"
            android:textColor="@color/white_color"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Maghrib"
            android:textColor="@color/white_color"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Isha"
            android:textColor="@color/white_color"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_fajr"
            android:textColor="@color/white_color"
            android:textSize="@dimen/widget_time_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_dhur"
            android:textColor="@color/white_color"
            android:textSize="@dimen/widget_time_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_asr"
            android:textColor="@color/white_color"
            android:textSize="@dimen/widget_time_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_maghrib"
            android:textColor="@color/white_color"
            android:textSize="@dimen/widget_time_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_isha"
            android:textColor="@color/white_color"
            android:textSize="@dimen/widget_time_text_size"
            android:layout_margin="@dimen/widget_text_margin"/>



    </LinearLayout>


</LinearLayout>